# BossPatcher

./: .gitignore  Cargo.toml  README.md
crates/launcher-core/: Cargo.toml
crates/launcher-core/src/: call.rs  config.rs  download.rs  error.rs  hash.rs  lib.rs  manifest.rs  patch.rs  path.rs  plan.rs
crates/launcher-core/tests/: e2e_patch.rs  patch_flow.rs
crates/manifestgen/: Cargo.toml
crates/manifestgen/src/: main.rs
e2e-test/launcher/: BossPatcher_e2e.toml  local_only.txt
e2e-test/launcher/data/: client.grf
e2e-test/launcher/data/한국어/: existing.spr
e2e-test/server/: manifest.toml  server.py
e2e-test/server/data/: BossPatcher_e2e.toml  extra_remote.txt
e2e-test/server/data/data/: client.grf
e2e-test/server/data/data/简体中文/: 说明.txt
e2e-test/server/data/data/한국어/: 스프라이트.spr
frontend-contract/: api.js  events.d.ts  index.html  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/permissions/autogenerated/: app_exit.toml  call_alias.toml  cancel_patch.toml  get_status.toml  patch_files.toml
src-tauri/src/: app.rs  commands.rs  emitter.rs  main.rs
