[package]
name = "bosspatcher-launcher"
version.workspace = true
description = "BossPatcher Windows launcher built with Tauri v2"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
launcher-core.workspace = true
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
url.workspace = true
tracing.workspace = true

tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-log.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader"] }
