[package]
name = "launcher-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
reqwest.workspace = true
futures-util.workspace = true
md5.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
tracing.workspace = true
urlencoding.workspace = true
scopeguard = "1.2"

[dev-dependencies]
tempfile = "3.19"
