[package]
name = "launcher-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
reqwest.workspace = true
futures-util.workspace = true
md5.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
tracing.workspace = true
urlencoding.workspace = true
scopeguard = "1.2"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tempfile = "3.19"
tokio-test = "0.4.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
