[package]
name = "manifestgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "manifestgen"
path = "src/main.rs"

[dependencies]
launcher-core.workspace = true
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
md5.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
